feat: Phase 1 - CURSOR KILLER Code Editor 🚀
This is THE EVOLUTION that changes everything.

✅ Monaco Editor (VS Code's actual editor)
✅ File tree with folder/file icons
✅ 4-panel layout (tree, editor, terminal, AI chat)
✅ Click file → opens in editor
✅ Cmd+S to save
✅ Syntax highlighting for all languages
✅ Terminal integration
✅ Real-time command execution

Phase 1 Complete. Cursor is DONE. 💀

Next: Phase 2 (Git integration, auto-commit)

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "vctt_agi_ui",
   "packageManager": "yarn@4.11.0",
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@monaco-editor/react": "^4.7.0",
     "@types/recharts": "^2.0.1",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
