--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-is": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.4.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "vscode-icons-js": "^11.6.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
