feat(ui): full command palette with fuzzy search and all actions

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
     "@types/recharts": "^2.0.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
