--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-is": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.4.1",
-    "socket.io-client": "^4.8.1",
-    "vscode-icons-js": "^11.6.1"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
@@ -30,9 +29,11 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "vscode-icons-js": "^11.6.1"
   },
   "type": "module",
   "version": "1.0.0",
