--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/recharts": "^2.0.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.553.0",
+    "monaco-editor": "^0.55.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-is": "^19.2.0",
