--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ dist
 dist-ssr
 *.local
 
+# Lock files (Yarn only)
+package-lock.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
